<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.marktony.translator.ui.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/app_name"
                android:gravity="center_vertical"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/body1_primary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:text="@string/version"
                android:textSize="@dimen/body1_primary"
                android:textColor="@android:color/primary_text_light"
                android:gravity="center_vertical"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_rate"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/body1_primary"
                    android:textColor="@android:color/primary_text_light" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/caption_primary"
                    android:text="@string/rate_description" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="@dimen/body1_primary"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author_name"
                    android:textSize="@dimen/body1_primary"
                    android:textColor="@android:color/primary_text_light"
                    android:gravity="center_vertical"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/caption_primary"
                    android:text="@string/author_description" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_github"
                android:text="@string/follow_on_github"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/primary_text_light"
                android:gravity="center_vertical"
                android:textSize="@dimen/body1_primary"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:textSize="@dimen/body1_primary"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:id="@+id/layout_bugs"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_advice"
                    android:textSize="@dimen/body1_primary"
                    android:textColor="@android:color/primary_text_light" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/caption_primary"
                    android:text="@string/feedback_advice_description" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:id="@+id/layout_support"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coffee"
                    android:textSize="@dimen/body1_primary"
                    android:textColor="@android:color/primary_text_light" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/caption_primary"
                    android:text="@string/coffee_description" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_open_source_licenses"
                android:text="@string/open_source_licenses"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/primary_text_light"
                android:textSize="@dimen/body1_primary"
                android:gravity="center_vertical"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
